# signal-telegram-bridge

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  dev.compose.yml  pyproject.toml
bridge/: __main__.py  accounts.py
bridge/core/: config.py
bridge/modules/: signal.py  telegram.py
bridge/util/: string.py
